health-pod-with-liveness-readiness.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: health
    version: v1
    name: health
  name: health-v1
spec:
      containers:
        - image: ragnaroek/health:2
          name: health
          ports:
            - containerPort: 8000
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 1
            periodSeconds: 1
            timeoutSeconds: 1

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 2
            timeoutSeconds: 1
