health-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: health
    version: v1
    name: health
  name: health-v1
spec:
      containers:
        - image: ragnaroek/health:2
          name: health
          ports:
            - containerPort: 8000
              protocol: TCP
