health-v1-deployment-with-secret.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: health-v1-with-secret
spec:
  replicas: 3
  selector:
    matchLabels:
        name: health
  strategy:
    type: RollingUpdate
    rollingUpdate:
        maxSurge: 1
  template:
    metadata:
      labels:
        name: health
        app: health
        version: v1
    spec:
      containers:
        - image: gcr.io/fdc-test-statistic/health:2
          name: health
          ports:
            - containerPort: 8000
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 1
            periodSeconds: 1
            timeoutSeconds: 1

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 45
            periodSeconds: 2
            timeoutSeconds: 1
