health-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: health-v1
  name: health-v1
spec:
  ports:
    - nodePort: 30010
      targetPort: 8000
      protocol: TCP
      port: 8000
  selector:
    app: health
  type: NodePort
